k8s/k8s.deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  labels:
    app: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: docker.registry.com/hello:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
